--- a/ZirraForming/client/package.json
+++ b/ZirraForming/client/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.29.1",
+    "@react-three/fiber": "^8.7.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dat": "^14.0.3",
+    "dat.gui": "^0.7.9",
+    "framer-motion": "^7.3.2",
+    "gsap": "^3.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.5",
     "styled-components": "^5.3.5",
+    "three": "^0.143.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
