--- a/ZirraForming/client/package.json
+++ b/ZirraForming/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.6",
     "@react-three/drei": "^9.0.2",
     "@react-three/fiber": "^8.7.4",
     "@testing-library/jest-dom": "^5.16.5",
