S07P22D107-310 인프라 설정 파일 수정
Former-commit-id: 6d86eb6528050b79aa6343302016bb346ad5cbda

--- a/ZirraForming/infra/docker-compose-dev.yml
+++ b/ZirraForming/infra/docker-compose-dev.yml
@@ -69,8 +69,8 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql_db_dev:3306/zirraforming?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&useLegacyDatetimeCode=false
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: ssafywlfkvhald
-      SPRING_REDIS_HOST: redis
-      SPRING_REDIS_PORT: 6380
+      SPRING_REDIS_HOST: redis_dev
+      SPRING_REDIS_PORT: 6379
     volumes:
       - /home/ubuntu/front/build/images:/images
     depends_on:
