--- a/ZirraForming/server/src/main/resources/application.yml
+++ b/ZirraForming/server/src/main/resources/application.yml
@@ -87,7 +87,7 @@ spring:
 
 # cors 설정
 cors:
-  allowed-origins: 'http://j7d107.p.ssafy.io:3000'
+  allowed-origin-patterns: '*'
   allowed-methods: GET,POST,PUT,DELETE,OPTIONS
   allowed-headers: '*'
   max-age: 3600
