S07P22D107-456 Oauth Jwt 로직 수정
Former-commit-id: 57b899dd6eb5b217ff00f8151dd156a9e89be038

--- a/ZirraForming/server/src/main/resources/application.yml
+++ b/ZirraForming/server/src/main/resources/application.yml
@@ -102,7 +102,7 @@ app:
     tokenExpiry: 1800000
     refreshTokenExpiry: 604800000
   oauth2:
-    authorizedRedirectUris: http://j7d107.p.ssafy.io
+    authorizedRedirectUris: http://localhost:3000
 
 logging:
   level:
