--- a/ZirraForming/client/package.json
+++ b/ZirraForming/client/package.json
@@ -17,8 +17,10 @@
     "dat.gui": "^0.7.9",
     "framer-motion": "^7.3.2",
     "gsap": "^3.11.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
