S07P22D107-211 인프라 구축
Former-commit-id: 7f3401ac4d3e976d7415f67db106fed5efef5c87

--- a/ZirraForming/infra/Dockerfile-react
+++ b/ZirraForming/infra/Dockerfile-react
@@ -1,6 +1,7 @@
 FROM node:16
 WORKDIR "/usr/src/app"
-COPY ./front/client/package.json ./
-RUN npm install --force
-COPY ./front/client/ ./
+COPY ./app/client/client/ ./
+RUN rm -rf node_modules
+RUN rm -rf package-lock.json
+RUN npm install --legacy-peer-deps
 CMD ["npm","run","start"]
