S07P22D107-605 별보러갈래 전체 결과보기 비즈니스 로직 작성
Former-commit-id: 1c55a5766d97dd51ca8d789acbb58f8d5d80c7db

--- a/ZirraForming/server/src/main/resources/application.yml
+++ b/ZirraForming/server/src/main/resources/application.yml
@@ -84,7 +84,10 @@ spring:
           tokenUri: https://kauth.kakao.com/oauth/token
           userInfoUri: https://kapi.kakao.com/v2/user/me
           userNameAttribute: id
-
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
 # cors 설정
 cors:
   allowed-origin-patterns: '*'
@@ -114,7 +117,7 @@ logging:
 file:
   dir: /images/
 
-ssafy.server.url: http://j7d107.p.ssafy.io
+ssafy.server.url: https://j7d107.p.ssafy.io
 ssafy.server.fastapi.url: http://j7d107.p.ssafy.io:8000
 
 ---
