--- a/ZirraForming/client/package.json
+++ b/ZirraForming/client/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-calendar-heatmap": "^1.7.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
