S07P22D107-585 fastApi 통신불가 오류수정
Former-commit-id: 15b83d1db992dbf1db95548531762528a97f21ac

--- a/ZirraForming/server/src/main/resources/application.yml
+++ b/ZirraForming/server/src/main/resources/application.yml
@@ -108,8 +108,7 @@ logging:
 file:
   dir: /images/
 
-ssafy.server.url: http://j7d107.p.ssafy.io
-ssafy.server.fastapi.url: http://j7d107.p.ssafy.io:8000
+ssafy.server.url: https://j7d107.p.ssafy.io
 
 ---
 # 운영 DB
