--- a/ZirraForming/infra/nginx/nginx.conf
+++ b/ZirraForming/infra/nginx/nginx.conf
@@ -14,9 +14,9 @@ server {
         root /var/www/certbot;
     }
 
-    location / {
-        return 308 https://$host$request_uri;   # http 요청을 https로 리다이렉션
-    }
+#    location / {
+#        return 308 https://$host$request_uri;   # http 요청을 https로 리다이렉션
+#    }
 }
 
 server {
@@ -54,13 +54,13 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-#    location /fastapi {
-#        proxy_pass http://my_fastapi:8000;
-#        proxy_set_header Host $host:$server_port;
-#        proxy_set_header X-Forwarded-Host $server_name;
-#        proxy_set_header X-Real-IP $remote_addr;
-#        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#    }
+    location /fastapi {
+        proxy_pass http://my_fastapi:8000;
+        proxy_set_header Host $host:$server_port;
+        proxy_set_header X-Forwarded-Host $server_name;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 
     location /utils {
         proxy_pass http://$spring_url;
